2010-05-07  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet/AspNetAppProject.cs:
	* MonoDevelop.AspNet/AspNetExecutionHandler.cs: Fix checks to
	  allow .NET 4.

2010-04-28  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Html/PathCompletion.cs:
	* MonoDevelop.Html/DocTypeCompletionData.cs:
	* MonoDevelop.AspNet.Parser/SuggestedHandlerCompletionData.cs:
	  Track API changes.

2010-04-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.AspNet/AspNetSyntaxMode.cs:
	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs: Worked on
	  ASP.NET highlighting.

2010-04-21  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs: Worked on
	  ASP.NET completion.

2010-04-20  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.AspNet.Gui/ILanguageCompletionBuilder.cs: 

	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs: Worked on
	  ASP.NET completion.

2010-04-20  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.AspNet.Gui/ILanguageCompletionBuilder.cs: fixed
	  ASP.NET completion.

2010-04-19  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs:
	* MonoDevelop.AspNet.Gui/ILanguageCompletionBuilder.cs: Worked
	  on ASP.NET completion.

2010-03-22  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* MonoDevelop.AspNet.addin.xml: Bumped MD version.

2010-03-17  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.AspNet.csproj: Remove import off mono.addins
	  targets.

2010-03-17  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* gtk-gui/gui.stetic:
	* MonoDevelop.AspNet.csproj:
	* MonoDevelop.AspNet.addin.xml:
	* MonoDevelop.Html/PathCompletion.cs:
	* MonoDevelop.AspNet/XspParameters.cs:
	* MonoDevelop.AspNet/WebTypeManager.cs:
	* MonoDevelop.Html/HtmlSchemaService.cs:
	* MonoDevelop.AspNet.Parser/Document.cs:
	* MonoDevelop.AspNet/AspNetAppProject.cs:
	* MonoDevelop.AspNet.Parser/Directive.cs:
	* MonoDevelop.AspNet/AspNetToolboxNode.cs: