@@ -34,7 +34,7 @@ namespace MonoDevelop.Html
 {
 	
 	
-	public class DocTypeCompletionData : IActionCompletionData
+	public class DocTypeCompletionData : CompletionData
 	{
 		string name;
 		string text;
@@ -52,50 +52,33 @@ namespace MonoDevelop.Html
 			this.name = name;
 		}
 		
-		public IconId Icon {
+		public override IconId Icon {
 			get { return "md-literal"; }
 		}
 
-		public string DisplayText {
+		public override string DisplayText {
 			get { return name; }
 		}
 		
-		public string DisplayDescription {
-			get {
-				return null;
-			}
-		}
-		
-		
-		public string CompletionText {
+		public override string CompletionText {
 			get { return name; }
 		}
 
-		public string Description {
+		public override string Description {
 			get { return description; }
 		}
 		
-		public DisplayFlags DisplayFlags {
-			get { return DisplayFlags.None; }
-		}
-
-		public CompletionCategory CompletionCategory  {
-			get {
-				return null;
-			}
-		}
-		
-		public void InsertCompletionText (ICompletionWidget widget, CodeCompletionContext context)
+		public override void InsertCompletionText (CompletionListWindow window)
 		{
-			MonoDevelop.Ide.Gui.Content.IEditableTextBuffer buf = widget as MonoDevelop.Ide.Gui.Content.IEditableTextBuffer;
+			MonoDevelop.Ide.Gui.Content.IEditableTextBuffer buf = window.CompletionWidget as MonoDevelop.Ide.Gui.Content.IEditableTextBuffer;
 			if (buf != null) {
 				buf.BeginAtomicUndo ();
 				
-				int deleteStartOffset = context.TriggerOffset;
+				int deleteStartOffset = window.CodeCompletionContext.TriggerOffset;
 				if (text.StartsWith (docTypeStart)) {
-					int start = context.TriggerOffset - docTypeStart.Length;
+					int start = window.CodeCompletionContext.TriggerOffset - docTypeStart.Length;
 					if (start >= 0) {
-						string readback = buf.GetText (start, context.TriggerOffset);
+						string readback = buf.GetText (start, window.CodeCompletionContext.TriggerOffset);
 						if (string.Compare (readback, docTypeStart, StringComparison.OrdinalIgnoreCase) == 0)
 							deleteStartOffset -= docTypeStart.Length;
 					}
@@ -105,6 +88,6 @@ namespace MonoDevelop.Html
 				buf.InsertText (buf.CursorPosition, text);
 				buf.EndAtomicUndo ();
 			}
-		}		
+		}
 	}
 }
